--- a/style.css
+++ b/style.css
@@ -93,10 +93,10 @@ body {
     color: white;
     border: none;
     padding: 0.63em 1.58em;
-    margin-top: 40px;
-    margin-bottom: 8px;
-    margin-left: 44em;
-    margin-right: 44em;
+    margin-top: 2.5em;
+    margin-bottom: 0.5em;
+    margin-left: 24em;
+    margin-right: 24em;
     font-size: 16px;
     font-weight: 800;
     border-radius: 20px;
